tests/e2e/object_assign_map.error
Error: syntax error in story at line 2, column 5

2|        server = {"a": "b"}
          ^^^^^^^^^^^^^^^^^^

E0100: Can't assign `Map[string,string]` to `Object`
