tests/e2e/object_assign_map.story
http server
    server = {"a": "b"}
